# VSCode_espidf_waveshare_esp32-p4-lcd

./: .gitignore  CMakeLists.txt  Universal_SendtoGit.bat  espid_waveshare_esp32-p4-lcd.ini  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c
